--- a/gyakorlat04_feladatok.ipynb
+++ b/gyakorlat04_feladatok.ipynb
@@ -1592,14 +1592,94 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "select count(*) as 'DB',\r\n",
+                "        iif(GROUPING_ID(month(FELVITEL)) = 1, 'Összesen', cast(month(FELVITEL) as  NVARCHAR(10))) as 'Month',\r\n",
+                "        iif(GROUPING_ID(DAY(FELVITEL)) = 1, 'Összesen', cast(day(FELVITEL) as NVARCHAR(10))) as 'Day'\r\n",
+                "        \r\n",
+                "from Termek\r\n",
+                "GROUP by rollup(month(FELVITEL), day(FELVITEL))\r\n",
+                "having month(FELVITEL) is null or day(FELVITEL) is null"
             ],
             "metadata": {
                 "azdata_cell_guid": "06d9a62b-9430-424b-a135-d80e675f0eb3",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "(5 rows affected)"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.057"
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "execute_result",
+                    "metadata": {},
+                    "execution_count": 14,
+                    "data": {
+                        "application/vnd.dataresource+json": {
+                            "schema": {
+                                "fields": [
+                                    {
+                                        "name": "DB"
+                                    },
+                                    {
+                                        "name": "Month"
+                                    },
+                                    {
+                                        "name": "Day"
+                                    }
+                                ]
+                            },
+                            "data": [
+                                {
+                                    "DB": "355",
+                                    "Month": "7",
+                                    "Day": "Összesen"
+                                },
+                                {
+                                    "DB": "194",
+                                    "Month": "8",
+                                    "Day": "Összesen"
+                                },
+                                {
+                                    "DB": "1",
+                                    "Month": "9",
+                                    "Day": "Összesen"
+                                },
+                                {
+                                    "DB": "1",
+                                    "Month": "12",
+                                    "Day": "Összesen"
+                                },
+                                {
+                                    "DB": "551",
+                                    "Month": "Összesen",
+                                    "Day": "Összesen"
+                                }
+                            ]
+                        },
+                        "text/html": [
+                            "<table>",
+                            "<tr><th>DB</th><th>Month</th><th>Day</th></tr>",
+                            "<tr><td>355</td><td>7</td><td>Összesen</td></tr>",
+                            "<tr><td>194</td><td>8</td><td>Összesen</td></tr>",
+                            "<tr><td>1</td><td>9</td><td>Összesen</td></tr>",
+                            "<tr><td>1</td><td>12</td><td>Összesen</td></tr>",
+                            "<tr><td>551</td><td>Összesen</td><td>Összesen</td></tr>",
+                            "</table>"
+                        ]
+                    }
+                }
+            ],
+            "execution_count": 14
         }
     ]
 }
