--- a/gyakorlat05_feladatok.ipynb
+++ b/gyakorlat05_feladatok.ipynb
@@ -28,7 +28,11 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "select  IIF(GROUPING_ID(year(r.REND_DATUM)) = 1, 'Összesen', cast(year(r.REND_DATUM) as nvarchar(4))),\r\n",
+                "        sum(MENNYISEG * rt.EGYSEGAR)\r\n",
+                " from Rendeles r join Rendeles_tetel rt on r.SORSZAM = rt.SORSZAM\r\n",
+                " WHERE r.[LOGIN] = 'norbert2'\r\n",
+                " group by rollup( YEAR(r.REND_DATUM)) "
             ],
             "metadata": {
                 "azdata_cell_guid": "6ab9f633-a3b5-48c9-a1dc-4fb8235ae85b",
@@ -53,7 +57,13 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "select r.SZALL_DATUM, r.SZALL_MOD,\r\n",
+                "        GROUPING_ID(r.SZALL_DATUM, r.SZALL_MOD)\r\n",
+                "from Rendeles r join Rendeles_tetel rt on r.SORSZAM = rt.SORSZAM\r\n",
+                "                join termek t on rt.TERMEKKOD = t.TERMEKKOD\r\n",
+                "WHERE MEGYS = 'db'\r\n",
+                "group by rollup(r.szall_datum, r.szall_mod)\r\n",
+                "having GROUPING_ID(r.szall_DATUM, r.SZALL_MOD) > 0"
             ],
             "metadata": {
                 "azdata_cell_guid": "222b9618-a8e8-42b4-a8e8-d002257122b7",
@@ -157,7 +167,10 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT*,\r\n",
+                "    LAG(NEV, 1, 'Nincs előző') OVER(ORDER by NEV),\r\n",
+                "    LEAD(nev, 1, 'Nincs következő') OVER(ORDER by NEV)\r\n",
+                "from Ugyfel"
             ],
             "metadata": {
                 "azdata_cell_guid": "f2b7400d-1255-40ac-9250-4d57f9da5357",
@@ -182,7 +195,12 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT distinct tk.KAT_NEV,\r\n",
+                "        tk.szulo_kat,\r\n",
+                "        COUNT(*) over(partition by tk.KAT_NEV)\r\n",
+                "        --avg(t.LISTAAR) over(partition by tk.KAT_NEV)\r\n",
+                "from Termek t join Termekkategoria tk on t.KAT_ID = tk.KAT_ID\r\n",
+                "--GROUP by tk.KAT_NEV"
             ],
             "metadata": {
                 "azdata_cell_guid": "84b7e896-f36e-4985-88f5-e0f706494fef",
@@ -206,7 +224,10 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT *,\r\n",
+                "NTILE(4) OVER(PARTITION BY MENNYISEG order by MENNYISE) AS 'Mennyiségi kategória'\r\n",
+                "FROM Rendeles_tetel\r\n",
+                "where EGYSEGAR > 100"
             ],
             "metadata": {
                 "azdata_cell_guid": "f09edb3f-649b-4a96-958e-9e12774ae8b7",
@@ -231,7 +252,10 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "select Termek.TERMEKKOD, MEGNEVEZES, Termekkategoria.KAT_NEV,\r\n",
+                "        FIRST_VALUE(LISTAAR) OVER (Partition BY kat_nev ORDER BY LISTAAR asc),\r\n",
+                "        first_VALUE(LISTAAR) OVER (Partition BY kat_nev ORDER BY LISTAAR desc)\r\n",
+                "from Termek join Termekkategoria on Termek.KAT_ID = Termekkategoria.KAT_ID"
             ],
             "metadata": {
                 "azdata_cell_guid": "10a77fc9-e61a-46fc-a401-59720d82bc50",
@@ -306,7 +330,12 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "SELECT TERMEKKOD,\r\n",
+                "        MEGNEVEZES,\r\n",
+                "        LISTAAR,\r\n",
+                "        --(LAG(LISTAAR) OVER(ORDER BY LISTAAR) + LISTAAR + LEAD(LISTAAR) over(order by LISTAAR)) / 3 ez bonyolult, ehelyett:\r\n",
+                "        avg(LISTAAR) OVER(order by LISTAAR rows between 1 preceding and 1 following)\r\n",
+                "from Termek"
             ],
             "metadata": {
                 "azdata_cell_guid": "dd6e89bd-08f9-4b18-8460-03c45b503df0",
