--- a/gyakorlat05_feladatok.ipynb
+++ b/gyakorlat05_feladatok.ipynb
@@ -3197,8 +3197,23 @@
                 "azdata_cell_guid": "8b49ed67-28c6-4880-82a8-cd369e5bba99",
                 "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Commands completed successfully."
+                    },
+                    "metadata": {}
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 54
         },
         {
             "cell_type": "markdown",
